Shorten left nav to make sure it won't overlap the right part

--- a/themes/rf-web-new/assets/css/blog.css
+++ b/themes/rf-web-new/assets/css/blog.css
@@ -24,3 +24,6 @@
 .translationslist p {
     display: inline;
 }
+.nav-left-custom {
+  max-width: 10%;
+}
